update styles.css and mediaqueries to fix overlap sections

--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -9,6 +9,7 @@
     #contact,
     #projects {
         height: fit-content;
+        flex-wrap: wrap;
     }
 }
 
@@ -31,6 +32,7 @@
     #experience, 
     .experience-details-container {
         margin-top: 2rem;
+        flex-wrap: wrap;
     }
     #profile, 
     .section-container {
