--- a/styles.css
+++ b/styles.css
@@ -151,7 +151,7 @@ a:hover {
 section {
     padding-top: 4vh;
     /*height: 96vh;*/
-    margin: 0 10rem;
+    margin: 70px 10rem;
     box-sizing: border-box;
     min-height: fit-content;
 }
@@ -358,6 +358,7 @@ article .icon {
 
 #projects {
     position: relative;
+    flex-wrap: wrap;
 }
 
 .color-container {
